--- a/panel/templates/login.html
+++ b/panel/templates/login.html
@@ -1,3 +1,6 @@
+{% for error in errors %}
+<div class="alert alert-danger">{{error}}</div>
+{% endfor %}
 <form method="post">
     <div class="form-group">
         <label for="u">username</label>
@@ -9,4 +12,3 @@
     </div>
     <button type="submit" class="btn btn-primary">submit</button>
 </form>
-    
