fix raw display in browsers & link to raw page

--- a/panel/templates/batch.html
+++ b/panel/templates/batch.html
@@ -10,6 +10,7 @@
 						<button>{{publicState}}</button>
 					</a>
 				{% endif %}
+				<p><a href="raw.php?b={{batchcode}}">raw</a></p>
 			</p>
 		</div>
 		<br>
