--- a/panel/templates/history.html
+++ b/panel/templates/history.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block body %}
 	<body>
+		{% include "banner.html" %}
 		<div class="container">
-			{% include "banner.html" %}
 			<br>
 			<div class="row text-center">
 				<table class="table-bordered table-striped" style="width:100%;">
@@ -12,13 +12,15 @@
 						<th>view</th>
 					</thead>
 					<tbody>
-                    {% for batch in batches %}
-                        <tr>
-                            <td>{{batch.code}}</td>
-                            <td>{{batch.size}}</td>
-                            <td><a href="batch.php?b={{batch.code}}">view</a></td>
-                        </tr>
-                    {% endfor %}
+						{% for batch in batches %}
+							<tr>
+								<td>{{batch.code}}</td>
+								<td>{{batch.size}}</td>
+								<td>
+									<a href="batch.php?b={{batch.code}}">view</a>
+								</td>
+							</tr>
+						{% endfor %}
 					</tbody>
 				</table>
 			</div>
