--- a/panel/templates/login.html
+++ b/panel/templates/login.html
@@ -1,30 +1,46 @@
 {% extends "base.html" %}
 
 {% block body %}
-<body>
-	<div class="container">
-
+	<body>
 		{% include "banner.html" %}
+		<div class="container">
+			<br>
 
-		<br>
-		<div class="row">
-			<div class="jumbotron">
-				{% for error in errors %}
-					<div class="alert alert-danger">{{error}}</div>
-				{% endfor %}
-				<form method="post">
-					<div class="form-group">
-						<label for="u">username</label>
-						<input type="usern" id="u" name="u" class="form-control">
+			<div class="row">
+				<div class="col s12 m6">
+					{% for error in errors %}
+						<div class="card red darken-1">
+							<div class="card-content white-text">
+								<p>{{error}}</p>
+							</div>
+						</div>
+					{% endfor %}
+					<div class="card">
+						<div class="card-content white-text">
+							<form method="post">
+								<div class="row">
+									<div class="input-field col s12">
+										<input id="u" name="u" type="text" class="validate">
+										<label for="u">Username</label>
+									</div>
+								</div>
+								<div class="row">
+									<div class="input-field col s12">
+										<input id="p" name="p" type="password" class="validate">
+										<label for="p">Password</label>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col s12">
+										<button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+									</div>
+								</div>
+							</form>
+						</div>
 					</div>
-					<div class="form-group">
-						<label for="p">password</label>
-						<input type="password" id="p" name="p" class="form-control">
-					</div>
-					<button type="submit" class="btn btn-primary">submit</button>
-				</form>
+				</div>
 			</div>
+
 		</div>
-	</div>
-</body>
+	</body>
 {% endblock %}
